--- a/Event-planner-frontend/package.json
+++ b/Event-planner-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "ionicons": "^8.0.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
