--- a/Event-planner-backend/BuildConfig.yaml
+++ b/Event-planner-backend/BuildConfig.yaml
@@ -20,12 +20,22 @@ spec:
       env:
         - name: GO111MODULE
           value: "on"
+        - name: CGO_ENABLED
+          value: "0"
+        - name: GOFLAGS
+          value: "-mod=readonly"
   output:
     to:
       kind: ImageStreamTag
       name: event-planner-backend:latest
-  postCommit:
-    args:
-      - go
-      - test
-      - ./...
+  triggers:
+    - type: ConfigChange
+    - type: ImageChange
+      imageChangeParams:
+        automatic: true
+        containerNames:
+          - event-planner-backend
+        from:
+          kind: ImageStreamTag
+          namespace: openshift
+          name: golang:1.21
