--- a/Event-planner-frontend/Dockerfile
+++ b/Event-planner-frontend/Dockerfile
@@ -1,32 +1,34 @@
-# Stage 1: Build stage
+# ---------- Build stage ----------
 FROM node:20-alpine AS builder
 
-# Set working directory
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
 RUN npm ci
 
-# Copy source code
 COPY . .
-
-# Build the application
 RUN npm run build
 
-# Stage 2: Production stage with Nginx
+
+# ---------- Runtime stage ----------
 FROM nginx:alpine
 
-# Copy built assets from builder
+# Remove default config
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy built assets
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy custom nginx configuration
+# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80
+# Make required directories writable for random UID
+RUN mkdir -p /tmp/client_body \
+    && chmod -R 777 /tmp
+
+# OpenShift uses 8080
 EXPOSE 8080
 
-# Start nginx
+# Run nginx in foreground
 CMD ["nginx", "-g", "daemon off;"]
+
