--- a/Event-planner-frontend/Dockerfile
+++ b/Event-planner-frontend/Dockerfile
@@ -1,34 +1,18 @@
-# ---------- Build stage ----------
+# Stage 1: Build
 FROM node:20-alpine AS builder
-
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm ci
-
 COPY . .
 RUN npm run build
 
+# Stage 2: Nginx (OpenShift-safe)
+FROM nginxinc/nginx-unprivileged:alpine
 
-# ---------- Runtime stage ----------
-FROM nginx:alpine
-
-# Remove default config
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Copy built assets
 COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Make required directories writable for random UID
-RUN mkdir -p /tmp/client_body \
-    && chmod -R 777 /tmp
-
-# OpenShift uses 8080
 EXPOSE 8080
 
-# Run nginx in foreground
 CMD ["nginx", "-g", "daemon off;"]
 
