--- a/Event-planner-frontend/nginx.conf
+++ b/Event-planner-frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 5000;
-    server_name event-planner-backend;
+    listen 8080;
+    server_name localhost;
 
     root /usr/share/nginx/html;
     index index.html;
