--- a/Event-planner-frontend/nginx.conf
+++ b/Event-planner-frontend/nginx.conf
@@ -25,6 +25,18 @@ server {
         application/xml+rss
         text/javascript;
 
+    # Proxy API requests to backend
+    location /api/ {
+        proxy_pass http://event-planner-git:8080/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        proxy_buffering off;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
