--- a/Event-planner-frontend/nginx.conf
+++ b/Event-planner-frontend/nginx.conf
@@ -27,7 +27,7 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://event-planner-git:8080/api/;
+        proxy_pass http://event-planner-backend:8080/api/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
